--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "me",
   "type": "module",
   "scripts": {
-    "generate-fonts": "node generate-map.js"
+    "generate-map": "node generate-map.js"
   },
   "dependencies": {
     "axios": "^1.10.0",
