--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "license": "MIT",
   "author": "me",
+  "type": "module",
   "scripts": {
-    "generate-map": "node generate-map.js"
+    "generate-map": "node generate-map.js",
+    "measure-fonts": "node measure-fonts.js"
   },
   "dependencies": {
     "axios": "^1.10.0",
