--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "google-fonts-librarian",
   "version": "1.0.0",
-  "description": "Map the GFont CDN library",
+  "description": "Map the Google Font CDN library",
   "homepage": "https://github.com/kellensoft/google-fonts-librarian#readme",
   "bugs": {
     "url": "https://github.com/kellensoft/google-fonts-librarian/issues"
@@ -14,11 +14,10 @@
   "author": "me",
   "type": "module",
   "scripts": {
-    "generate-map": "node generate-map.js",
+    "generate-map": "node generate-map.js"
   },
   "dependencies": {
     "axios": "^1.10.0",
-    "puppeteer": "^24.14.0",
     "slugify": "^1.6.6"
   }
 }
